# JuuWazaKura

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
dataset/: LIG2202D1T1.csv  LIG2202D1T3.csv  LIG2202D2T1.csv  LIG2202D2T2.csv  LIG2202D2T3.csv  LIS2104D1T1.csv  LIS2104D1T3.csv  LIS2104D2T1.csv  LIS2104D3T1.csv  SAR2210D1T1.csv  SAR2210D1T1FIN.csv  SAR2210D1T2FIN.csv  SAR2210D2T1FIN.csv  SAR2210D2T2FIN.csv  dataset.json
doc/: hand_classification_guide.it.md  template.csv
jwk/: cli.py
jwk/clipper/: __init__.py  __main__.py  clipper.py
jwk/dataset/: __init__.py  __main__.py  dataset_config.json  ds_downloader.py  ds_generator.py  ds_handler.py  ds_orchestrator.py  livefootage_instance.py
jwk/devtools/: __main__.py  gipick.py  plotting.py  yolov11.py
jwk/model/: __init__.py  __main__.py  frame_box.py  keras_callbacks.py  model.py  preprocessor.py  tracker.py
jwk/model/arch/: cnn2d_rnn.py  cnn3d_rnn.py  cnn_block.py  recompute_grad_sequential.py
jwk/posefitter/: __main__.py  posefitter.py
jwk/utils/: __init__.py  __main__.py  drawing.py  environment.py  logging.py  time.py
src/: clipcommons.py  main.py
src/clipper/: clipper.py
src/juwazaku/: pipe_people.py  pipe_person.py  posefitter.py
src/jwk/: utils.py
src/jwk/clipper/: __main__.py  clipper.py
src/jwk/commons/: __init__.py  __main__.py  my_env.py
src/jwk/dataset/: __init__.py  __main__.py  dataset_config.json  ds_downloader.py  ds_generator.py  ds_handler.py  ds_instance.py
src/jwk/devtools/: __main__.py  gipick.py  (+1 more)
test/: test_ds_generator.py  test_ds_orchestrator.py
(+14 files in other folders)
